<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical"
    tools:context="com.vita.licl.testlogin.MainActivity">


    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_a"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:background="@drawable/round_corner"
        android:text="效果图"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/btn_b"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/round_corner"
        android:text="线性布局"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/btn_c"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/round_corner"
        android:text="计算器界面"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:paddingTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_d"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/round_corner"
            android:text="查看本activity+当前fragment调用"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_e"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/round_corner"
            android:text="新Activity"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
        </LinearLayout>

    <FrameLayout
        android:id="@+id/frag_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>
