...
    android:background="@drawable/no_login_head"
    android:scaleType="centerInside"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#AAFFFFFF"
        android:layout_gravity="center_horizontal"
        android:text="登录"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
...
