...
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="start|bottom">
            <ImageView  android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgview_3"
                        android:src="@drawable/tutu"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="end|bottom">
...
