...
            android:layout_width="0dp"
            android:text="="
            android:textSize="60sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/scrollFooter"
            android:layout_width="0dp"
            android:text="+"
            android:textSize="60sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
...
